# dtscan

./: DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.md  README.qmd  dtscan.Rproj  notes.md
R/: aaa.R  dtscan.R  extendr-wrappers.R
man/: dtscan-package.Rd  dtscan.Rd
src/: DTSCAN-win.def  Makevars  Makevars.in  Makevars.win  Makevars.win.in  entrypoint.c
src/rust/: Cargo.toml
src/rust/src/: lib.rs
tests/: testthat.R
tests/testthat/: test-dtscan.R
tools/: config.R
